feat: wtf is going on

--- a/package.json
+++ b/package.json
@@ -2,6 +2,9 @@
   "name": "converter",
   "module": "index.ts",
   "type": "module",
+  "scripts": {
+    "build:linux": "bun build ./src/index.ts --minify --compile --sourcemap --external=sharp --outfile=./dist/converter --target=bun-linux-x64"
+  },
   "devDependencies": {
     "@types/bun": "latest"
   },
